fix: geo iframe not showing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -474,6 +474,7 @@ body {
   object-fit: cover;
   overflow: hidden;
   max-width: 100%;
+  min-width: fit-content;
 }
 
 .text-container {
